created Rewriter which takes a match code and scans existing code to find a test matching and then has a rewrite function for when a match is found. This GREATLY simplified writing compiler rewrites. Code is super tight and readable. Lots of nice doc work -- css, content, etc.